Keep a position's account once, in the carrier that answers for it
A part held a copy of what the positions it named were left holding, and
the one thing that read it was the sift that built an account of a rule
out of it. With that gone the copy was written and never read, and the
machinery feeding it stayed: a merge on every branch, a second copy of
the rule an unread alternative applies to a position's reasons, and a
distribution of refusals whose guard compared a set of one type against
a key of another and so matched nothing at all. What survives is one
account per question — the position's, where the values are, and the
rule's, as facts that say the written place they were decided at.

A set of those facts is finished one way, which keeps the order they
were met in. The order is asserted of nothing, and a projection out of
the set is published, so a copy free to arrange them by hash would have
one compiler over one source publish two documents.

And what asked for a machine holds the place it will be filed under
rather than the node, so what makes two of those one is what makes two
facts one.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>